--- a/nginx php-fpm mariadb phpmyadmin/docker-compose.yml
+++ b/nginx php-fpm mariadb phpmyadmin/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     ports:
       - "8080:80"
     volumes:
+      - ./settings/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./settings/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./html:/var/www/html
 
