--- a/code-server/configs/visual-studio-code/settings.json
+++ b/code-server/configs/visual-studio-code/settings.json
@@ -1,4 +1,6 @@
 {
+  "editor.fontFamily": "'Cascadia Code', Consolas, 'Courier New', monospace",
+  "editor.fontSize": 15,
   "terminal.integrated.defaultProfile.linux": "zsh",
   "workbench.colorTheme": "Default Dark+",
   "workbench.iconTheme": "material-icon-theme"
